# bank-app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: container.yaml
deployment/: kustomization.yaml
deployment/manifests/: cronjob.yaml  deploy.yaml  httpRoute.yaml  svc.yaml
src/: database.db  main.py  openapi.yaml  pyproject.toml
src/models/: database.py  orders.py
src/services/: __init__.py  treasury.py
src/static/: index.html  orders.html  orders.js  style.css  yields.js
tests/: conftest.py  test_main.py
